force-app/main/default/objects/Course_Delivery__c/Course_Delivery__c.object-meta.xml
<CustomObject>
    <description>This will track, start and end date(time)from course duration, Instructor(user the will be deliver the course), where will course be teach(location region) what course wi beig teach. and status, how many are attending(attendee count)</description>
    <label>Course Delivery</label>
    <nameField>
        <displayFormat>DELIVERY-{00000}</displayFormat>
        <label>Course Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>