force-app/main/default/objects/Course_Delivery__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User(instructor) I need two add two field to qualify instructor( checkbox) and maybe record types for technical and no technicals
availablity , how qualify , which course they can teach</description>
    <label>Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>