force-app/main/default/objects/Course_Delivery__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>type time only, how to implement date / time together</description>
    <label>Start Date</label>
    <type>Time</type>
</CustomField>